k8s/gitea-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gitea
  ports:
    - port: 3000
      targetPort: 3000
